# eth_template

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  metadata.json
api/: eth_template:template.os-v0.wit
eth_template/: Cargo.toml  metadata.json
eth_template/abi/: Counter.json  Gamelord.json
eth_template/eth_template/abi/: Counter.json  CounterV2.json
eth_template/eth_template/src/: caller.rs  contract_caller.rs  counter_caller.rs  eth_caller.rs  eth_utils.rs  lib.rs  types.rs
eth_template/pkg/: manifest.json
eth_template/pkg/ui/: index.html
eth_template/pkg/ui/assets/: index-947QC4W3.js  index-BJfbId94.js  index-BLzMOqoM.js  index-BMr_7vgG.js  index-CxOzhkdO.css  index-D3HbQiO1.js  index-DAdgX_Zk.js  index-DDFuk5ya.js  index-DGFe5ypw.js  index-DmB66et6.js  index-Dn3zlj3v.js  index-DqY6-Ai4.js  index-Zspsu6Ht.js
eth_template/src/: lib.rs
eth_template/ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
eth_template/ui/public/: minecraft.mtl
eth_template/ui/src/: App.jsx  actions.jsx  index.css  main.jsx  wsUpdate.jsx
eth_template/ui/src/abi/: Counter.json  CounterV2.json
pkg/: manifest.json
pkg/ui/: index.html
sol-contracts/: build.sh  deploy.sh  package-lock.json  package.json  script.sh
sol-contracts/cache/: solidity-files-cache.json  test-failures
sol-contracts/script/: Deploy.s.sol  UpgradeToV2.s.sol
sol-contracts/src/: Counter.sol  CounterV2.sol  Gamelord.sol
sol-contracts/test/: Counter.t.sol  Gamelord.t.sol
test/: tests.toml
ui/: index.html  vite.config.ts
ui/src/: App.jsx  InterfaceUI.jsx  (+4 more)
(+85 files in other folders)
