[package]
name = "eth_template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
wit-bindgen = "0.24.0"
hex = "0.4.3"
alloy-sol-types = { version = "0.7.6", features = ["json"] }
alloy-primitives = "0.7.6"
alloy-rlp = "0.3.5"
alloy-contract = "0.1.3"
alloy = { version = "0.1.2", features = [
    "network",
    "signers",
    "signer-local",
    "json-rpc",
    "consensus",
    "rpc-types"
]}
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
lazy_static = "1.4"
chrono = "0.4"
rust-crypto-wasm = "0.3.1"
rand = "0.8.5"
dotenvy = "0.15.7"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
